chore: update index.html

--- a/src-tauri/index.html
+++ b/src-tauri/index.html
@@ -1,3 +1,3 @@
 <script>
-    window.location.href = "https://github.com/kimlimjustin/wiz#how-to-use";
+    window.location.href = "https://discord.com/app";
 </script>
